# sdk-python

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  latest_release.json  pyproject.toml
compat/predicate-sdk-shim/: README.md  predicate_sdk_shim.py  pyproject.toml
docs/: CODE_REVIEW_PHASE2_BU_PARITY.md  QUERY_DSL.md  sentience_context_design.md
examples/: agent_layers_demo.py  agent_runtime_captcha_strategies.py  agent_runtime_verification.py  async_api_demo.py  auth_injection_agent.py  basic_agent.py  basic_agent_async.py  click_rect_demo.py  debug_read_async_empty_content.py  find_text_demo.py  hello.py  hello_async.py  human_cursor_click_demo.py  local_tracing_agent.py  pydantic_ai_self_correcting_click.py  pydantic_ai_typed_extraction.py  query_demo.py  query_demo_async.py  read_markdown.py  read_markdown_async.py  residential_proxy_agent.py  runtime_agent_minimal.py  semantic_wait_demo.py  semantic_wait_demo_async.py  show_grid_examples.py  test_local_llm_agent.py  video_recording_advanced.py  video_recording_demo.py  wait_and_click.py  wait_and_click_async.py
predicate/: __init__.py  _extension_loader.py  actions.py  agent.py  agent_config.py  agent_runtime.py  async_api.py  browser.py  cloud_tracing.py  constants.py  debugger.py  failure_artifacts.py  formatting.py  generator.py  llm_provider.py  models.py  ordinal.py  read.py  runtime_agent.py  snapshot.py  text_search.py  tracer_factory.py  tracing.py  verification.py
scripts/: sync_extension.sh
sentience/: __init__.py  action_executor.py  actions.py  agent.py  agent_runtime.py  async_api.py  (+20 more)
(+139 files in other folders)
