[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "predicate-sdk"
version = "1.1.0"
description = "Compatibility shim for predicate-runtime"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "Sentience Team"}
]
dependencies = [
    "predicate-runtime==1.1.0",
]
keywords = ["predicate", "runtime", "compatibility", "shim"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/Predicate-Labs/sdk-python"
Repository = "https://github.com/Predicate-Labs/sdk-python"
Issues = "https://github.com/Predicate-Labs/sdk-python/issues"

[tool.setuptools]
py-modules = ["predicate_sdk_shim"]
